NO-JIRA fixed an issue where scrollbars where not correctly displayed on Firefox

--- a/server/sonar-web/src/main/js/app/styles/components/issues.css
+++ b/server/sonar-web/src/main/js/app/styles/components/issues.css
@@ -25,3 +25,13 @@
 .issue {
   max-width: 980px;
 }
+
+.issue-filters-list {
+  /*
+   * On Firefox on Windows, the scrollbar hides the sidebar's content.
+   * Using 'scrollbar-gutter:stable' is a workaround to ensure consistency with other browsers.
+   * @see https://bugzilla.mozilla.org/show_bug.cgi?id=764076
+   * @see https://discuss.sonarsource.com/t/unnecessary-horizontal-scrollbar-on-issues-page/14889/4
+   */
+  scrollbar-gutter: stable;
+}
